--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.slim-column {
+  width: 600px; /* Adjust the width as needed */
+  margin: 20px auto; /* Center the column horizontally */
+  padding: 20px; /* Add padding for spacing inside the column */
+  background-color: #f0f0f0; /* Set a background color */
+  border: 1px solid #ccc;
+  position: relative; /* Add a border if desired */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.intro{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  font-size: 40px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.blog-post-title{
+  font-size: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {    
+  list-style-type: none;  /* Remove default padding */
+  position: absolute;
+  top: 0; /* Position at the top within SlimColumn */
+  right: 0; /* Position at the right within SlimColumn */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-right: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar li {
+  margin-right: 20px; /* Adjust spacing between navbar items as needed */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar li:last-child {
+  margin-right: 0; /* Remove margin from the last navbar item */
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #333; /* Set the text color for the navbar links */
+}
+
+.navbar a:hover {
+  text-decoration: underline; /* Apply an underline on hover */
 }
