--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,59 @@
-.slim-column {
-  width: 600px; /* Adjust the width as needed */
-  margin: 20px auto; /* Center the column horizontally */
-  padding: 20px; /* Add padding for spacing inside the column */
-  background-color: #f0f0f0; /* Set a background color */
-  border: 1px solid #ccc;
-  position: relative; /* Add a border if desired */
+@media screen and (min-width: 769px) {
+  /* Styles for screens with a minimum width of 769px */
+  /* Desktop-specific styles can be applied here */
+  .slim-column {
+    width: 800px; /* Adjust the width as needed */
+    margin: 20px auto; /* Center the column horizontally */
+    padding: 20px; /* Add padding for spacing inside the column */
+    background-color: #f0f0f0; /* Set a background color */
+    border: 1px solid #ccc;
+    position: relative; /* Add a border if desired */
+  }
+
+
+
+  
 }
+
+@media (max-width: 768px) {
+  .intro {
+    font-size: 30px;
+  }
+
+}
+
+
+.blog-post{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.blog-post-image{
+  flex: 1;
+  margin-right: 20px;
+}
+.blog-post-content{
+  flex: 2;
+}
+
+.blog-post-image img {
+  max-width: 100%; /* Ensure the image fits within the container */
+  height: auto; /* Maintain the aspect ratio of the image */
+}
+
+
+
+
+
 
 @media (max-width: 768px) {
   .slim-column {
     width: 300px;
+    margin: 20px auto; /* Center the column horizontally */
+    padding: 20px; /* Add padding for spacing inside the column */
+    background-color: #f0f0f0; /* Set a background color */
+    border: 1px solid #ccc;
+    position: relative;
   }
 }
 
