--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,19 @@
     border: 1px solid #ccc;
     position: relative; /* Add a border if desired */
   }
-
-
-
-  
+  .blog-post-image img {
+    max-width: 400px; /* Ensure the image fits within the container */
+    height: 150; /* Maintain the aspect ratio of the image */
+  }
 }
 
 @media (max-width: 768px) {
   .intro {
     font-size: 30px;
+  }
+  .blog-post-image img {
+    max-width: 200px; /* Ensure the image fits within the container */
+    height: 150px; /* Maintain the aspect ratio of the image */
   }
 
 }
@@ -33,13 +37,10 @@
   margin-right: 20px;
 }
 .blog-post-content{
-  flex: 2;
+  flex: 2
 }
 
-.blog-post-image img {
-  max-width: 100%; /* Ensure the image fits within the container */
-  height: auto; /* Maintain the aspect ratio of the image */
-}
+
 
 
 
