--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   .blog-post-title{
     font-size: 30px;
   }
-  .intro{
+  .text-overlay{
     padding-top: 40px;
     padding-bottom: 40px;
     font-size: 44px;
@@ -27,18 +27,40 @@
 }
 /* DESKTOP SPECIFIC */
 
+
+
+
+/* global styles */
 .App{
-  background-color: #0f1b4e; /* Set your desired background color */
+  background: linear-gradient(rgba(2,0,36,1) 0%, rgba(44,31,79,1) 100%, rgba(15,27,78,1) 100%);
+  background-color: line; /* Set your desired background color */
   display: flex;
   min-height: 100vh;
 }
 
 .slim-column{
   height: 100%;
-  background-color: #0f1b4e;
+  background-color: rgba(0, 0, 0, 0);
   color: #f0f0f0;
   border: none;
 }
+
+
+.image-container img {
+  width: 100%;
+  height: 100%;/* Ensure the image covers the container */
+}
+
+.text-overlay{
+  margin-top: 30%;
+  top: 0;
+  position: absolute;
+}
+
+
+
+/* global styles */
+
 
 
 
@@ -48,11 +70,11 @@
     width: 340px;
     margin: 20px auto; 
     padding: 20px; 
-    background-color: #f0f0f0; 
-    border: 1px solid #ccc;
+    background-color: rgba(0, 0, 0, 0);
+    border: 0;
     position: relative;
   }
-  .intro {
+  .text-overlay {
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 30px;
@@ -91,6 +113,9 @@
   flex: 2;
   overflow: hidden; 
   text-overflow: ellipsis; 
+}
+.view-more{
+  color: #f0f0f0;
 }
 /* Blog Post CSS */
 
