--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@
 .image-container img {
   width: 100%;
   height: 100%;
+  min-width: 100px; /* Example minimum width */
+  min-height: 100px; /* Example minimum height */
 }
 
 .text-overlay{
