--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,8 @@
 .image-container img {
   width: 100%;
   height: 100%;
+  min-width: 100px; /* Example minimum width */
+  min-height: 100px; /* Example minimum height */
 }
 
 .text-overlay{
@@ -126,10 +128,16 @@
   align-items: center;
   margin-bottom: 20px;
 }
-.blog-post-image{
-  flex: 1;
-  margin-right: 20px;
+
+.blog-post-wrapper {
+  display: flex;
+  align-items: center;
 }
+
+.blog-post-logos{
+  flex: 1;
+}
+
 .blog-post-content{
   flex: 2;
   overflow: hidden; 
